--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -3,12 +3,15 @@ services:
     evalueat-app:
         image: evalueat
         environment:
-            - _JAVA_OPTIONS=-Xmx512m -Xms256m
+            - JAVA_OPTS=-Xmx512m -Xms256m -agentlib:jdwp=transport=dt_socket,address=8001,server=y,suspend=n
             - SPRING_PROFILES_ACTIVE=prod,swagger
             - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
             - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
             - SPRING_DATASOURCE_URL=jdbc:mariadb://evalueat-mariadb:3306/evalueat
-            - JHIPSTER_SLEEP=30 # gives time for the JHipster Registry to boot before the application
+            - JHIPSTER_SLEEP=10 # gives time for the JHipster Registry to boot before the application
+        ports:
+            - "8001:8001"
+            - "8081:8081"
     evalueat-mariadb:
         extends:
             file: mariadb.yml
